tests/positive/pr113_tuple_destructure.safe
-- Test: pr113_tuple_destructure
-- Description: Tuple returns, tuple field access, and local destructuring.
-- Expected: ACCEPT

package pR113_Tuple_Destructure

   function lookup (flag : in boolean) returns (boolean, integer)

      if flag
         return (True, 7);

      return (False, 0);


   function read_Second returns integer
      direct : (boolean, integer) = lookup (False);

      (Found, Value) : (boolean, integer) = lookup (True);
      if Found
         return Value;

      return direct.2;



